--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -24,7 +24,11 @@ jobs:
           deno-version: v2.x
 
       - name: Build step
+        env: 
+            GITHUB_CLIENT_ID: ${{ secrets.OAUTH_CLIENT_ID }}
+            GITHUB_CLIENT_SECRET: ${{ secrets.OAUTH_CLIENT_SECRET }}
         run: "deno task build "
+        
 
       - name: Upload to Deno Deploy
         uses: denoland/deployctl@v1
